Bugs resolved and features added.