@@ -22,8 +22,8 @@ import java.util.concurrent.atomic.AtomicLong;
 public class FileTransferManager implements FileTransferMonitor {
     private static final int MAX_PARALLEL_FILE_TRANSFERS = 5;
     private final Semaphore fileTransferLock = new Semaphore(MAX_PARALLEL_FILE_TRANSFERS);
-    private final Semaphore universalLock = new Semaphore(1);
-    private final ExecutorService executorService = Executors.newFixedThreadPool(MAX_PARALLEL_FILE_TRANSFERS);
+    private final Semaphore universalLock = new Semaphore(1, true);
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
     private final Duration DELAY = Duration.ofMillis(300);
     private final ConcurrentLinkedQueue<String> failedFiles = new ConcurrentLinkedQueue<>();
     private final ConcurrentLinkedQueue<FileTransferHandler> pendingFiles = new ConcurrentLinkedQueue<>();
